Se agregan las app developers y ayuda

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,3 +7,4 @@ encoding//polls/admin.py=utf-8
 encoding//polls/models.py=utf-8
 encoding//polls/urls.py=utf-8
 encoding//polls/views.py=utf-8
+encoding//stock/models.py=utf-8
