--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 Django==1.5.5
-django-debug-toolbar==0.9.4
 django-htmlmin==0.6.2
 django-suit==0.2.5
-django-userswitch==0.2.2
 fhurl==0.1.7
-nose==1.3.0
 smarturls==0.1.2
+# following are for DEV only
+django-debug-toolbar==0.9.4
 virtualenv==1.10.1
 wdb==1.0.3
 yolk==0.4.3
+nose==1.3.0
+django-userswitch==0.2.2
