--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,10 +5,7 @@ encoding//agenda/urls.py=utf-8
 encoding//agenda/views.py=utf-8
 encoding//developers/urls.py=utf-8
 encoding//developers/views.py=utf-8
-encoding//polls/admin.py=utf-8
-encoding//polls/models.py=utf-8
-encoding//polls/urls.py=utf-8
-encoding//polls/views.py=utf-8
+encoding//mysite/settings.py=utf-8
 encoding//principal/urls.py=utf-8
 encoding//principal/views.py=utf-8
 encoding//stock/models.py=utf-8
